--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="it">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -88,6 +87,12 @@
       background-color: #a66e6e;
     }
 
+    .gallery {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+
     .gallery img {
       width: 100%;
       max-width: 300px;
@@ -103,12 +108,13 @@
     footer {
       text-align: center;
       padding: 1rem;
-      font-size: 0.9rem;
+      font-size: 1rem;
       color: #fff;
+      background-color: #B07F7F;
+      margin-top: 3rem;
     }
   </style>
 </head>
-
 <body>
   <header>
     <h1>Mirko & Elena</h1>
@@ -118,13 +124,14 @@
   <section>
     <h3>Programma della giornata</h3>
     <p>
-      La nostra giornata speciale inizierà alle <strong>16:30</strong> con la cerimonia civile immersa nel verde del parco del Du Lac et Du Parc Grand Resort.
-      Dopo esserci detti “sì”, ci sposteremo nella suggestiva terrazza della piscina Cristallo, dove dalle <strong>17:30</strong> vi accoglieremo per un raffinato aperitivo all’aperto.
-      Alle <strong>19:00</strong> ci ritroveremo nella veranda panoramica per una cena indimenticabile, circondati dall’atmosfera romantica del lago e dalla compagnia di tutti voi.
-      Infine, alle <strong>21:00</strong>, sarà il momento del taglio della torta, seguito da musica, balli e tanta allegria con il nostro DJ set fino all’<strong>1:00</strong>.
+      La nostra giornata speciale inizierà alle <strong>16:30</strong> con la cerimonia civile immersa nel verde del parco.
+      Alle <strong>17:30</strong> vi accoglieremo per un raffinato aperitivo sulla terrazza della piscina Cristallo.
+      Alle <strong>19:00</strong> ci ritroveremo nella veranda panoramica per la cena.
+      Alle <strong>21:00</strong> taglio torta, musica e balli nella sala Magnolia fino all’<strong>1:00</strong>.
     </p>
-
   </section>
+
+  <section>
     <h3>Conferma la tua presenza</h3>
     <form>
       <label for="nome">Nome e Cognome</label>
@@ -134,15 +141,4 @@
       <input type="email" id="email" name="email" placeholder="La tua email..." required>
 
       <label for="presenza">Parteciperai?</label>
-      <select id="presenza" name="presenza">
-        <option value="sì">Sì, con gioia!</option>
-        <option value="forse">Forse, ti aggiorno</option>
-        <option value="no">Purtroppo no</option>
-      </select>
-
-      <label for="note">Note aggiuntive</label>
-      <textarea id="note" name="note" rows="4" placeholder="Intolleranze, richieste particolari..."></textarea>
-
-      <button type="submit">Invia RSVP</button>
-    </form>
-  </section>
+      <select id="presenza"
