--- a/index.html
+++ b/index.html
@@ -7,367 +7,369 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
 
-    <style>
-        /* Stili CSS globali */
-        body {
-            margin: 0;
-            font-family: 'Montserrat', sans-serif;
-            background-color: #b6C1ad;
-            color: #B27777;
-            line-height: 1.6;
-            position: relative;
-            overflow-x: hidden;
-            scroll-behavior: smooth;
-            /* Di default, su schermi piccoli (mobile) il body è VISIBILE */
-            display: block;
-        }
+   <style>
+    /* Stili CSS globali */
+    body {
+        margin: 0;
+        font-family: 'Montserrat', sans-serif;
+        background-color: #b6C1ad;
+        color: #B27777;
+        line-height: 1.6;
+        position: relative;
+        overflow-x: hidden;
+        scroll-behavior: smooth;
+        /* Di default, su schermi piccoli (mobile) il body è VISIBILE */
+        display: block;
+    }
 
-        /* Questo div per il messaggio desktop è inizialmente NASCOSTO */
-        .desktop-message-container {
-            display: none; /* Nascondilo su schermi mobili */
-            text-align: center;
-            padding: 50px;
-            background-color: rgba(255, 255, 255, 0.9);
-            color: #B27777;
-            font-size: 1.2rem;
-            height: 100vh; /* Occupa tutta l'altezza dello schermo */
-            flex-direction: column; /* Usiamo flex per centrare */
-            justify-content: center;
-            align-items: center;
-        }
+    /* Questo div per il messaggio desktop è inizialmente NASCOSTO */
+    .desktop-message-container {
+        display: none; /* Nascondilo su schermi mobili */
+        text-align: center;
+        padding: 50px;
+        background-color: rgba(255, 255, 255, 0.9);
+        color: #B27777;
+        font-size: 1.2rem;
+        height: 100vh; /* Occupa tutta l'altezza dello schermo */
+        flex-direction: column; /* Usiamo flex per centrare */
+        justify-content: center;
+        align-items: center;
+    }
 
-        /* Aggiungiamo box-sizing universale per un migliore controllo del layout */
-        *, *::before, *::after {
-            box-sizing: border-box;
-        }
+    /* Aggiungiamo box-sizing universale per un migliore controllo del layout */
+    *, *::before, *::after {
+        box-sizing: border-box;
+    }
 
-        .container {
-            max-width: 960px;
-            margin: 0 auto;
-            padding: 20px;
-        }
+    .container {
+        max-width: 960px;
+        margin: 0 auto;
+        padding: 20px;
+    }
 
+    header {
+        /* Ho corretto l'URL dell'immagine per la cartella 'img/' */
+        background-image: url('img/IMG-20240922-WA0011.jpg');
+        background-size: cover;
+        background-position: bottom center;
+        background-repeat: no-repeat;
+        padding: 2rem;
+        text-align: center;
+        border-radius: 0 0 15px 15px;
+        box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+        min-height: 200px; /* Altezza minima per mobile */
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    }
+    /* REGOLE PER IL TESTO "ELENA ❤️ MIRKO" CHE NON VADA A CAPO */
+    header h1 {
+        font-family: 'Great Vibes', cursive;
+        font-size: 3.5rem;
+        color: #B27777;
+        margin: 0;
+        white-space: nowrap; /* Impedisce al testo di andare a capo */
+        overflow: hidden;     /* Nasconde il contenuto che eccede i bordi */
+        text-overflow: ellipsis; /* Aggiunge "..." se il testo viene tagliato (opzionale) */
+    }
+
+    header h2 {
+        font-family: 'Montserrat', sans-serif;
+        font-size: 1.5rem;
+        color: #B27777;
+        margin-top: 0.5rem;
+    }
+
+    section {
+        background-color: rgba(255, 255, 255, 0.9);
+        padding: 2rem;
+        margin: 2rem auto;
+        border-radius: 15px;
+        box-shadow: 0 2px 10px rgba(0,0,0,0.15);
+        width: 90%;
+        max-width: 600px;
+    }
+
+    #rsvp {
+        display: none;
+    }
+
+    #programma, #regalo-nozze, #gallery, #rsvp-button-container {
+        text-align: center;
+    }
+
+    #rsvp-button-container {
+        margin: 2rem auto;
+        width: 90%;
+        max-width: 600px;
+    }
+
+    h3 {
+        font-family: 'Montserrat', sans-serif;
+        font-size: 2rem;
+        color: #B27777;
+        text-align: center;
+        margin-top: 0;
+        margin-bottom: 1.5rem;
+    }
+
+    p, li {
+        font-family: 'Montserrat', sans-serif;
+        color: #B27777;
+    }
+
+    .big-word {
+        font-size: 1.2em;
+        font-weight: bold;
+    }
+
+    footer {
+        background-color: rgba(255, 255, 255, 0.9);
+        text-align: center;
+        padding: 0.8rem;
+        font-size: 0.9rem;
+        color: #B27777;
+        border-radius: 15px 15px 0 0;
+        margin-top: 0.5rem;
+        box-shadow: 0 -2px 8px rgba(0,0,0,0.1);
+    }
+
+    form label {
+        display: block;
+        margin-top: 1rem;
+        margin-bottom: 0.5rem;
+        color: #B27777;
+        font-weight: 600;
+    }
+
+    form input[type="text"],
+    form input[type="email"],
+    form input[type="number"],
+    form textarea,
+    form select {
+        display: block;
+        width: 100%;
+        margin-top: 0.5rem;
+        margin-bottom: 1.5rem;
+        padding: 0.75rem 10px;
+        font-size: 1rem;
+        border: 1px solid rgba(178, 119, 119, 0.5);
+        border-radius: 5px;
+        background-color: rgba(255, 255, 255, 0.7);
+        color: #B27777;
+    }
+
+    form input::placeholder,
+    form textarea::placeholder {
+        color: rgba(178, 119, 119, 0.8);
+    }
+
+    form select option {
+        background-color: #F0F0F0;
+        color: #B27777;
+    }
+
+    .menu-options-group {
+        border: 1px solid rgba(178, 119, 119, 0.3);
+        padding: 10px;
+        border-radius: 5px;
+        margin-bottom: 1.5rem;
+    }
+
+    .menu-option label {
+        display: inline-block;
+        margin-right: 15px;
+        margin-top: 0.5rem;
+        font-weight: normal;
+    }
+
+    .menu-option input[type="radio"] {
+        display: inline-block;
+        width: auto;
+        margin-right: 5px;
+    }
+
+    .guest-menu-preference {
+        background-color: rgba(255, 255, 255, 0.6);
+        padding: 10px 15px;
+        border-radius: 8px;
+        margin-bottom: 1rem;
+        border: 1px solid rgba(178, 119, 119, 0.2);
+    }
+
+    .guest-menu-preference label {
+        font-weight: normal;
+        margin-top: 0.5rem;
+        margin-bottom: 0.2rem;
+        color: #B27777;
+    }
+
+    .action-button {
+        background-color: #B27777;
+        color: white;
+        border: none;
+        cursor: pointer;
+        padding: 0.8rem 1.5rem;
+        border-radius: 5px;
+        transition: background-color 0.3s ease, transform 0.2s ease;
+        display: block;
+        width: 100%;
+        text-decoration: none;
+        font-family: 'Montserrat', sans-serif;
+        font-size: 1rem;
+        margin-top: 2rem;
+        margin-bottom: 1rem;
+    }
+
+    .action-button:hover {
+        background-color: #A06060;
+        transform: translateY(-2px);
+    }
+
+    .program-timeline {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+        padding: 20px 0;
+        text-align: center;
+    }
+
+    .program-item {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: rgba(255, 255, 255, 0.7);
+        padding: 15px 20px;
+        border-radius: 10px;
+        width: 90%;
+        max-width: 400px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
+
+    .program-time {
+        font-family: 'Great Vibes', cursive;
+        font-size: 2rem;
+        color: #B27777;
+        margin-bottom: 5px;
+    }
+
+    .program-icon {
+        font-size: 2.5rem;
+        margin-bottom: 10px;
+        color: #B27777;
+    }
+
+    .program-description {
+        font-size: 1rem;
+        color: #B27777;
+        margin: 0;
+    }
+
+    .program-item + .program-item::before {
+        content: '↓';
+        font-size: 2rem;
+        color: #B27777;
+        margin: -10px 0;
+        z-index: 2;
+    }
+
+    .gift-section {
+        text-align: center;
+    }
+
+    .gift-section p {
+        font-size: 1.1rem;
+        line-height: 1.6;
+    }
+
+    .gift-section strong {
+        font-size: 1.4rem;
+        display: block;
+        margin-top: 1rem;
+    }
+
+    /* --- Media Query per schermi desktop e tablet grandi (AUMENTA ALTEZZA HEADER) --- */
+    @media screen and (min-width: 769px) {
         header {
-            background-image: url('img/IMG-20240922-WA0011.jpg'); /* ASSICURATI CHE L'URL SIA ESATTO */
-            background-size: cover;
-            background-position: bottom center;
-            background-repeat: no-repeat;
-            padding: 2rem;
-            text-align: center;
-            border-radius: 0 0 15px 15px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-            min-height: 200px; /* Altezza minima per mobile */
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            flex-direction: column;
+            min-height: 400px; /* Altezza maggiore per desktop/tablet */
         }
-        /* REGOLE PER IL TESTO "ELENA ❤️ MIRKO" CHE NON VADA A CAPO */
+    }
+
+    /* Media Queries per Ottimizzazione Responsive (dimensioni generali per i testi e sezioni) */
+    @media screen and (max-width: 768px) {
         header h1 {
-            font-family: 'Great Vibes', cursive;
-            font-size: 3.5rem;
-            color: #B27777;
-            margin: 0;
-            white-space: nowrap; /* Impedisce al testo di andare a capo */
-            overflow: hidden;     /* Nasconde il contenuto che eccede i bordi */
-            text-overflow: ellipsis; /* Aggiunge "..." se il testo viene tagliato (opzionale) */
+            font-size: 2.8rem;
         }
-
         header h2 {
-            font-family: 'Montserrat', sans-serif;
-            font-size: 1.5rem;
-            color: #B27777;
-            margin-top: 0.5rem;
+            font-size: 1.2rem;
         }
-
         section {
-            background-color: rgba(255, 255, 255, 0.9);
-            padding: 2rem;
-            margin: 2rem auto;
-            border-radius: 15px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.15);
+            padding: 1.5rem;
+            margin: 1.5rem auto;
             width: 90%;
-            max-width: 600px;
+            max-width: 500px;
         }
-
-        #rsvp {
-            display: none;
-        }
-
-        #programma, #regalo-nozze, #gallery, #rsvp-button-container {
-            text-align: center;
-        }
-
-        #rsvp-button-container {
-            margin: 2rem auto;
-            width: 90%;
-            max-width: 600px;
-        }
-
         h3 {
-            font-family: 'Montserrat', sans-serif;
-            font-size: 2rem;
-            color: #B27777;
-            text-align: center;
-            margin-top: 0;
-            margin-bottom: 1.5rem;
+            font-size: 1.8rem;
         }
-
         p, li {
-            font-family: 'Montserrat', sans-serif;
-            color: #B27777;
+            font-size: 0.95rem;
         }
-
-        .big-word {
-            font-size: 1.2em;
-            font-weight: bold;
+        .program-item {
+            width: 95%;
         }
-
-        footer {
-            background-color: rgba(255, 255, 255, 0.9);
-            text-align: center;
-            padding: 0.8rem;
+        .action-button {
             font-size: 0.9rem;
-            color: #B27777;
-            border-radius: 15px 15px 0 0;
-            margin-top: 0.5rem;
-            box-shadow: 0 -2px 8px rgba(0,0,0,0.1);
+            padding: 0.7rem 1.2rem;
         }
+    }
 
-        form label {
-            display: block;
-            margin-top: 1rem;
-            margin-bottom: 0.5rem;
-            color: #B27777;
-            font-weight: 600;
+    @media screen and (max-width: 480px) {
+        header h1 {
+            font-size: 2.2rem;
         }
-
+        header h2 {
+            font-size: 1rem;
+        }
+        section {
+            padding: 1rem;
+            margin: 1rem auto;
+            border-radius: 10px;
+            width: 90%;
+            max-width: none;
+        }
+        h3 {
+            font-size: 1.5rem;
+        }
+        p, li {
+            font-size: 0.9rem;
+        }
         form input[type="text"],
         form input[type="email"],
         form input[type="number"],
         form textarea,
         form select {
-            display: block;
-            width: 100%;
-            margin-top: 0.5rem;
-            margin-bottom: 1.5rem;
-            padding: 0.75rem 10px;
-            font-size: 1rem;
-            border: 1px solid rgba(178, 119, 119, 0.5);
-            border-radius: 5px;
-            background-color: rgba(255, 255, 255, 0.7);
-            color: #B27777;
+            padding: 0.6rem 0.8rem;
         }
-
-        form input::placeholder,
-        form textarea::placeholder {
-            color: rgba(178, 119, 119, 0.8);
-        }
-
-        form select option {
-            background-color: #F0F0F0;
-            color: #B27777;
-        }
-
-        .menu-options-group {
-            border: 1px solid rgba(178, 119, 119, 0.3);
-            padding: 10px;
-            border-radius: 5px;
-            margin-bottom: 1.5rem;
-        }
-
-        .menu-option label {
-            display: inline-block;
-            margin-right: 15px;
-            margin-top: 0.5rem;
-            font-weight: normal;
-        }
-
-        .menu-option input[type="radio"] {
-            display: inline-block;
-            width: auto;
-            margin-right: 5px;
-        }
-
-        .guest-menu-preference {
-            background-color: rgba(255, 255, 255, 0.6);
-            padding: 10px 15px;
-            border-radius: 8px;
-            margin-bottom: 1rem;
-            border: 1px solid rgba(178, 119, 119, 0.2);
-        }
-
-        .guest-menu-preference label {
-            font-weight: normal;
-            margin-top: 0.5rem;
-            margin-bottom: 0.2rem;
-            color: #B27777;
-        }
-
         .action-button {
-            background-color: #B27777;
-            color: white;
-            border: none;
-            cursor: pointer;
-            padding: 0.8rem 1.5rem;
-            border-radius: 5px;
-            transition: background-color 0.3s ease, transform 0.2s ease;
-            display: block;
-            width: 100%;
-            text-decoration: none;
-            font-family: 'Montserrat', sans-serif;
-            font-size: 1rem;
-            margin-top: 2rem;
-            margin-bottom: 1rem;
+            font-size: 0.8rem;
+            padding: 0.6rem 1rem;
         }
+    }
 
-        .action-button:hover {
-            background-color: #A06060;
-            transform: translateY(-2px);
+    /* Media query per schermi più grandi (PC): NASCONDE IL SITO, MOSTRA MESSAGGIO */
+    /* QUESTA DEVE ESSERE L'ULTIMA REGOLA DI VISIBILITÀ PER ASSICURARSI CHE SIA APPLICATA CORRETTAMENTE */
+    @media screen and (min-width: 769px) {
+        body {
+            display: none; /* Nasconde tutto il contenuto del body del sito */
         }
-
-        .program-timeline {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 20px;
-            padding: 20px 0;
-            text-align: center;
+        .desktop-message-container {
+            display: flex; /* Mostra il messaggio per desktop */
         }
-
-        .program-item {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            background-color: rgba(255, 255, 255, 0.7);
-            padding: 15px 20px;
-            border-radius: 10px;
-            width: 90%;
-            max-width: 400px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        .program-time {
-            font-family: 'Great Vibes', cursive;
-            font-size: 2rem;
-            color: #B27777;
-            margin-bottom: 5px;
-        }
-
-        .program-icon {
-            font-size: 2.5rem;
-            margin-bottom: 10px;
-            color: #B27777;
-        }
-
-        .program-description {
-            font-size: 1rem;
-            color: #B27777;
-            margin: 0;
-        }
-
-        .program-item + .program-item::before {
-            content: '↓';
-            font-size: 2rem;
-            color: #B27777;
-            margin: -10px 0;
-            z-index: 2;
-        }
-
-        .gift-section {
-            text-align: center;
-        }
-
-        .gift-section p {
-            font-size: 1.1rem;
-            line-height: 1.6;
-        }
-
-        .gift-section strong {
-            font-size: 1.4rem;
-            display: block;
-            margin-top: 1rem;
-        }
-
-        /* --- Media Query per schermi desktop e tablet grandi (AUMENTA ALTEZZA HEADER) --- */
-        @media screen and (min-width: 769px) {
-            header {
-                min-height: 400px; /* Altezza maggiore per desktop/tablet */
-            }
-        }
-
-        /* Media Queries per Ottimizzazione Responsive (dimensioni generali) */
-        @media screen and (max-width: 768px) {
-            header h1 {
-                font-size: 2.8rem;
-            }
-            header h2 {
-                font-size: 1.2rem;
-            }
-            section {
-                padding: 1.5rem;
-                margin: 1.5rem auto;
-                width: 90%;
-                max-width: 500px;
-            }
-            h3 {
-                font-size: 1.8rem;
-            }
-            p, li {
-                font-size: 0.95rem;
-            }
-            .program-item {
-                width: 95%;
-            }
-            .action-button {
-                font-size: 0.9rem;
-                padding: 0.7rem 1.2rem;
-            }
-        }
-
-        @media screen and (max-width: 480px) {
-            header h1 {
-                font-size: 2.2rem;
-            }
-            header h2 {
-                font-size: 1rem;
-            }
-            section {
-                padding: 1rem;
-                margin: 1rem auto;
-                border-radius: 10px;
-                width: 90%;
-                max-width: none;
-            }
-            h3 {
-                font-size: 1.5rem;
-            }
-            p, li {
-                font-size: 0.9rem;
-            }
-            form input[type="text"],
-            form input[type="email"],
-            form input[type="number"],
-            form textarea,
-            form select {
-                padding: 0.6rem 0.8rem;
-            }
-            .action-button {
-                font-size: 0.8rem;
-                padding: 0.6rem 1rem;
-            }
-        }
-
-        /* Media query per schermi più grandi (PC): NASCONDE IL SITO, MOSTRA MESSAGGIO */
-        @media screen and (min-width: 769px) {
-            body {
-                display: none; /* Nasconde tutto il contenuto del body del sito */
-            }
-            .desktop-message-container {
-                display: flex; /* Mostra il messaggio per desktop */
-            }
-        }
-    </style>
+    }
+</style>
 </head>
 <body>
     <div class="desktop-message-container">
